[gd_scene load_steps=44 format=3 uid="uid://cdgxepr3o0x1u"]

[ext_resource type="Script" path="res://player/scripts/player.gd" id="1_vkbni"]
[ext_resource type="Texture2D" uid="uid://d24y147ttyvop" path="res://player/sprites/PlayerSprite02.png" id="2_np3m4"]
[ext_resource type="Script" path="res://player/scripts/player_state_machine.gd" id="3_nde3l"]
[ext_resource type="Texture2D" uid="uid://cfpwkmeig2s8y" path="res://player/sprites/Shadow.png" id="3_uur3k"]
[ext_resource type="Texture2D" uid="uid://ncll1muer2ag" path="res://player/sprites/AttackSprite01.png" id="3_yids2"]
[ext_resource type="Script" path="res://player/scripts/state_idle.gd" id="4_8w4bf"]
[ext_resource type="Script" path="res://player/scripts/state_walk.gd" id="5_n5cyh"]
[ext_resource type="Script" path="res://player/scripts/state_attack.gd" id="6_buuc4"]
[ext_resource type="AudioStream" uid="uid://cmuoi6rem3ma1" path="res://player/audio/SwordSwoosh.wav" id="8_6urtj"]
[ext_resource type="PackedScene" uid="uid://bj0c7ykg70exd" path="res://common_nodes/hurt_box/hurt_box.tscn" id="10_h367g"]
[ext_resource type="Script" path="res://player/scripts/player_interaction_host.gd" id="10_ui47x"]
[ext_resource type="Script" path="res://player/scripts/state_stun.gd" id="11_m1vaw"]
[ext_resource type="Script" path="res://player/scripts/player_camera.gd" id="11_nira0"]
[ext_resource type="PackedScene" uid="uid://dlovwsmvuwb60" path="res://common_nodes/hit_box/hit_box.tscn" id="13_403pf"]
[ext_resource type="AudioStream" uid="uid://b1omlp3gmsfh1" path="res://player/audio/hit_player.wav" id="14_afski"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1cjji"]
radius = 8.0

[sub_resource type="Animation" id="Animation_8p4vb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dlcc0"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_doo4e"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_53tve"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_a563b"]
resource_name = "no_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rr30n"]
_data = {
"RESET": SubResource("Animation_8p4vb"),
"attack_down": SubResource("Animation_dlcc0"),
"attack_side": SubResource("Animation_doo4e"),
"attack_up": SubResource("Animation_53tve"),
"no_attack": SubResource("Animation_a563b")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_54bu7"]
radius = 20.0

[sub_resource type="Animation" id="Animation_1p3u1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 36)]
}

[sub_resource type="Animation" id="Animation_fp557"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 17)]
}

[sub_resource type="Animation" id="Animation_86cdh"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [27, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}

[sub_resource type="Animation" id="Animation_iu70n"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -17)]
}

[sub_resource type="Animation" id="Animation_hwrrg"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_6jhqh"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="Animation" id="Animation_wrcbl"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_5jgoh"]
resource_name = "stun_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30]
}

[sub_resource type="Animation" id="Animation_ftjx2"]
resource_name = "stun_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [32]
}

[sub_resource type="Animation" id="Animation_88gjx"]
resource_name = "stun_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [31]
}

[sub_resource type="Animation" id="Animation_u02x7"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9, 12]
}

[sub_resource type="Animation" id="Animation_gtfij"]
resource_name = "walk_side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [17, 20]
}

[sub_resource type="Animation" id="Animation_fcnqn"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3x686"]
_data = {
"RESET": SubResource("Animation_1p3u1"),
"attack_down": SubResource("Animation_fp557"),
"attack_side": SubResource("Animation_86cdh"),
"attack_up": SubResource("Animation_iu70n"),
"idle_down": SubResource("Animation_hwrrg"),
"idle_side": SubResource("Animation_6jhqh"),
"idle_up": SubResource("Animation_wrcbl"),
"stun_down": SubResource("Animation_5jgoh"),
"stun_side": SubResource("Animation_ftjx2"),
"stun_up": SubResource("Animation_88gjx"),
"walk_down": SubResource("Animation_u02x7"),
"walk_side": SubResource("Animation_gtfij"),
"walk_up": SubResource("Animation_fcnqn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfa0s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nqs8y"]

[sub_resource type="Animation" id="Animation_stvj1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j2o4x"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.160784), Color(1, 1, 1, 1), Color(1, 1, 1, 0.407843), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.203922), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_afski")
}],
"times": PackedFloat32Array(0.0333333)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_v58bq"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahywh"]
_data = {
"RESET": SubResource("Animation_stvj1"),
"damaged": SubResource("Animation_j2o4x"),
"default": SubResource("Animation_v58bq")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_vkbni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1cjji")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
texture = ExtResource("2_np3m4")
hframes = 16
vframes = 3

[node name="ShadowSprite" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.186753, 0.172743, 0.172753, 0.552941)
show_behind_parent = true
position = Vector2(0, 20)
texture = ExtResource("3_uur3k")

[node name="AttackEffectSprite" type="Sprite2D" parent="Sprite2D"]
position = Vector2(5, 10)
texture = ExtResource("3_yids2")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D/AttackEffectSprite"]
libraries = {
"": SubResource("AnimationLibrary_rr30n")
}
autoplay = "no_attack"

[node name="AttackHurtBox" parent="Sprite2D" instance=ExtResource("10_h367g")]
unique_name_in_owner = true
position = Vector2(0, 36)
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackHurtBox"]
shape = SubResource("CircleShape2D_54bu7")
debug_color = Color(0.893045, 0.289931, 0.368612, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3x686")
}

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("3_nde3l")

[node name="idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_8w4bf")

[node name="walk" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_n5cyh")

[node name="attack" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_buuc4")
attack_sound = ExtResource("8_6urtj")
acceleration_speed = 12.0

[node name="stun" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_m1vaw")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("11_nira0")

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
volume_db = -6.0
max_polyphony = 5

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("10_ui47x")

[node name="Area2D" type="Area2D" parent="Interactions"]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/Area2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_dfa0s")
debug_color = Color(0.278431, 0.631373, 0, 0.65098)

[node name="HitBox" parent="." instance=ExtResource("13_403pf")]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_nqs8y")

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ahywh")
}
